--- a/.github/workflows/phpstan.yaml
+++ b/.github/workflows/phpstan.yaml
@@ -49,5 +49,5 @@ jobs:
 
       - name: Run
         run: |
-          docker compose run --rm php php -v
-          docker compose run --rm php php artisan -v
+          docker compose -f compose.ci.yaml run --rm php php -v
+          docker compose -f compose.ci.yaml run --rm php php artisan -v
