--- a/.github/workflows/phpstan.yaml
+++ b/.github/workflows/phpstan.yaml
@@ -50,4 +50,4 @@ jobs:
       - name: Run
         run: |
           docker compose -f compose.ci.yaml run --rm php php -v
-          docker compose -f compose.ci.yaml run --rm php php artisan -v
+          # docker compose -f compose.ci.yaml run --rm php php artisan -v
