--- a/docker/php/Dockerfile.ci
+++ b/docker/php/Dockerfile.ci
@@ -9,6 +9,16 @@ RUN apt-get update \
 
 COPY --from=composer /usr/bin/composer /usr/bin/composer
 
+ARG UID=1000
+ARG GID=1000
+ARG USERNAME=user
+ARG GROUPNAME=user
+
+RUN groupadd -g $GID $GROUPNAME \
+  && useradd -m -s /bin/bash -u $UID -g $GID $USERNAME
+
+USER $USERNAME
+
 WORKDIR /var/www/html
 
 COPY setup.sh .
