--- a/.github/workflows/phpstan.yaml
+++ b/.github/workflows/phpstan.yaml
@@ -34,8 +34,10 @@ jobs:
         run: |
           docker load -i ${{ needs.setup.outputs.tar }}
 
+      - name: Start up
+        run: docker compose up php -d
+
       - name: Run
         run: |
-          docker compose up php -d
           docker compose exec php php -v
           docker compose exec php php artisan -v
