--- a/.github/workflows/phpstan.yaml
+++ b/.github/workflows/phpstan.yaml
@@ -41,4 +41,4 @@ jobs:
         run: |
           docker compose exec php php -v
           docker compose exec php ls vendor
-          # docker compose exec php php artisan -v
+          docker compose exec php php artisan -v
