--- a/.github/workflows/phpstan.yaml
+++ b/.github/workflows/phpstan.yaml
@@ -35,10 +35,9 @@ jobs:
           docker load -i ${{ needs.setup.outputs.tar }}
 
       - name: Start up
-        run: docker compose up php -d
+        run: docker compose -f compose.ci.yaml up php -d
 
       - name: Run
         run: |
-          docker compose exec php php -v
-          docker compose exec php composer install -n --prefer-dist
-          docker compose exec php php artisan -v
+          docker compose -f compose.ci.yaml exec php php -v
+          docker compose -f compose.ci.yaml exec php php artisan -v
