--- a/.github/workflows/phpstan.yaml
+++ b/.github/workflows/phpstan.yaml
@@ -35,9 +35,13 @@ jobs:
           docker load -i ${{ needs.setup.outputs.tar }}
 
       - name: Start up
-        run: docker compose -f compose.ci.yaml up php -d
+        run: |
+          # docker compose -f compose.ci.yaml up php -d
+          docker compose up php -d
 
       - name: Run
         run: |
-          docker compose -f compose.ci.yaml exec php php -v
-          docker compose -f compose.ci.yaml exec php php artisan -v
+          docker compose exec php php -v
+          docker compose exec php php artisan -v
+          # docker compose -f compose.ci.yaml exec php php -v
+          # docker compose -f compose.ci.yaml exec php php artisan -v
